--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 .idea/*.iml
 __pycache__/
 **/__pycache__/
-# SimpeCBIR/__pycache__/
-# modules/__pycache__/
-# main/__pycache__/
+db.sqlite3
 .idea/*
 *.iws
 *.iml
@@ -82,5 +80,3 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-/db.sqlite3
-!/db.sqlite3
