--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "modules/CNN-CBIR"]
 	path = modules/CNN-CBIR
 	url = https://github.com/LionTao/CNN-CBIR.git
-[submodule ".\\modules\\ImageFeatureVector"]
-	path = .\\modules\\ImageFeatureVector
+[submodule "modules/ImageFeatureVector"]
+	path = ./modules/ImageFeatureVector
 	url = https://github.com/LionTao/ImageFeatureVector.git
