--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "modules/ImageFeatureVector"]
 	path = modules/ImageFeatureVector
 	url = https://github.com/LionTao/ImageFeatureVector.git
+[submodule "modules/ObjectDetection"]
+	path = modules/ObjectDetection
+	url = https://github.com/LionTao/ObjectDetection.git
