--- a/.gitmodules
+++ b/.gitmodules
@@ -10,12 +10,12 @@
 [submodule "modules/PatternDifference"]
 	path = modules/PatternDifference
 	url = https://github.com/LionTao/PatternDifference.git
-[submodule "modules/CNN-CBIR"]
-	path = modules/CNN-CBIR
-	url = https://github.com/LionTao/CNN-CBIR.git
 [submodule "modules/ObjectDetection"]
 	path = modules/ObjectDetection
 	url = https://github.com/LionTao/ObjectDetection.git
 [submodule "modules/ImageFeatureVector"]
 	path = modules/ImageFeatureVector
 	url = https://github.com/LionTao/ImageFeatureVector.git
+[submodule "modules/CNNCBIR"]
+	path = modules/CNNCBIR
+	url = https://github.com/LionTao/CNN_CBIR.git
