--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/*.iml
+.idea/**/*.xml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
